Creation fichier avec test présence, j'suis teubé ptn